.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Allowance_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Allowance_End_Time__c</fullName>
    <formula>TIMEVALUE(  Allowance_End_Time_TXT__c  + &quot;.000&quot; )</formula>
    <label>Allowance End Time</label>
    <type>Time</type>
</CustomField>