.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Allowance_End_Time_TXT__c.field-meta.xml
<CustomField>
    <fullName>Allowance_End_Time_TXT__c</fullName>
    <label>Allowance End Time TXT</label>
    <length>16</length>
    <type>Text</type>
</CustomField>