.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Allowance_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Start_Time__c</fullName>
    <formula>TIMEVALUE( Allowance_Start_Time_TXT__c + &quot;.000&quot; )</formula>
    <label>Allowance Start Time</label>
    <type>Time</type>
</CustomField>