.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Approved_with_a_generic_site__c.field-meta.xml
<CustomField>
    <fullName>Approved_with_a_generic_site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved with a generic site</label>
    <type>Checkbox</type>
</CustomField>