.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Authoriser__c.field-meta.xml
<CustomField>
    <fullName>Authoriser__c</fullName>
    <label>Authoriser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>