.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Auto_Broadcast__c.field-meta.xml
<CustomField>
    <fullName>Auto_Broadcast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Broadcast</label>
    <type>Checkbox</type>
</CustomField>