.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Basic_Pay__c.field-meta.xml
<CustomField>
    <fullName>Basic_Pay__c</fullName>
    <label>Basic Pay</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>