.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/BH_Connect_Candidate_Approved__c.field-meta.xml
<CustomField>
    <fullName>BH_Connect_Candidate_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the Shift allows Offline Timesheet Approval, this is to confirm the Candidate has confirmed the details of the shift.</description>
    <label>BH Connect Candidate Approved</label>
    <type>Checkbox</type>
</CustomField>