.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_By__c</fullName>
    <label>Booked By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>