.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Branch_for_reporting__c.field-meta.xml
<CustomField>
    <fullName>Branch_for_reporting__c</fullName>
    <formula>IF(ISBLANK(sirenum__Contract__c), sirenum__Team__r.sirenum__Account__r.sirenum__Client__r.Branch_Name__c, sirenum__Contract__r.sirenum__Client__r.Branch_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch (for shift reporting)</label>
    <type>Text</type>
</CustomField>