.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <description>Branch Name for Scheduler</description>
    <formula>Branch__r.Branch_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>