.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Break1_ID__c.field-meta.xml
<CustomField>
    <fullName>Break1_ID__c</fullName>
    <description>Break 1 ID, used as a reference in flow to determine which break to update if changed or deleted.</description>
    <label>Break1 ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>