.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Break_2_ID__c.field-meta.xml
<CustomField>
    <fullName>Break_2_ID__c</fullName>
    <description>Break 2 ID, used as a reference in flow to determine which break to update if changed or deleted.</description>
    <label>Break 2 ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>