.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancel_Charge_Client__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Charge_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Charge Client for Cancellation</description>
    <label>Cancel Charge Client?</label>
    <type>Checkbox</type>
</CustomField>