.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancel_Employee_Held__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Employee_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hold Shift before Cancellation to enable Worker to be assigned to a new Shift</description>
    <label>Cancel Employee Held</label>
    <type>Checkbox</type>
</CustomField>