.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancel_Fee_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Fee_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cancellation Fee to be applied</description>
    <label>Cancellation Fee Applicable</label>
    <type>Checkbox</type>
</CustomField>