.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancel_Pay_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Pay_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pay Candidate after Cancellation</description>
    <label>Cancel Pay Candidate?</label>
    <type>Checkbox</type>
</CustomField>