.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancel_Shift_Demand__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Shift_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Shift Demand?</label>
    <type>Checkbox</type>
</CustomField>