.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancellation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Shift Cancellation been completed?</description>
    <label>Cancellation Completed</label>
    <type>Checkbox</type>
</CustomField>