.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee__c</fullName>
    <label>Cancellation Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 Hours</fullName>
            </value>
            <value>
                <fullName>3 Hours</fullName>
            </value>
            <value>
                <fullName>4 Hours</fullName>
            </value>
            <value>
                <fullName>5 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>