.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancellation_Note__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Note__c</fullName>
    <description>Cancellation notes for Payroll</description>
    <label>Cancellation Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>