.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancellation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Outcome__c</fullName>
    <label>Cancellation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charge, No Pay</fullName>
            </value>
            <value>
                <fullName>No Charge, Pay</fullName>
            </value>
            <value>
                <fullName>Charge and Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>