.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <description>Name of person who sent cancel notification</description>
    <label>Cancelled By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>