.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Cancelled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date_Time__c</fullName>
    <description>Date/Time Cancellation notification received</description>
    <label>Cancelled Date/Time</label>
    <type>DateTime</type>
</CustomField>