.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Client_Facility__c.field-meta.xml
<CustomField>
    <fullName>Client_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client/Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>