.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Competency_JSON__c.field-meta.xml
<CustomField>
    <fullName>Competency_JSON__c</fullName>
    <label>Competency JSON</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>