.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Confirmed_Actual_Times__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Actual_Times__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Actual Times</label>
    <type>Checkbox</type>
</CustomField>