.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By__c</fullName>
    <description>Facility Confirmed By</description>
    <label>Confirmed By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>