.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Confirmed_With_Employee__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_With_Employee__c</fullName>
    <description>Employee Acceptance on Scheduler</description>
    <formula>IF(sirenum__Accepted__c = 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmed With Employee</label>
    <type>Checkbox</type>
</CustomField>