.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Confirmed_With_Facility__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_With_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed With Facility</label>
    <type>Checkbox</type>
</CustomField>