.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Connect_Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>Connect_Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connect Timesheet Approver</label>
    <referenceTo>Timesheet_Approver__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>