.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Desired_Employee__c.field-meta.xml
<CustomField>
    <fullName>Desired_Employee__c</fullName>
    <label>Desired Employee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>