.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Employee_Changed__c.field-meta.xml
<CustomField>
    <fullName>Employee_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Employee Changed Shift? Update on Shift miniform</description>
    <label>Employee Changed</label>
    <type>Checkbox</type>
</CustomField>