.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Facility_Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Facility_Confirmation_Status__c</fullName>
    <formula>IF(
  NOT(Confirmed_With_Employee__c) || sirenum__Cancelled__c,
  &quot;-&quot;,
  IF(
    Confirmed_With_Employee__c &amp;&amp; NOT(Confirmed_With_Facility__c),
    &quot;Facility Pending&quot;,
    IF(
      Confirmed_With_Employee__c &amp;&amp; Confirmed_With_Facility__c,
      &quot;Facility Confirmed&quot;,
      &quot;-&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Confirmation Status</label>
    <type>Text</type>
</CustomField>