.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Is_Public_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Is_Public_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public Holiday</label>
    <type>Checkbox</type>
</CustomField>