.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Is_Test_Shift__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Shift</label>
    <type>Checkbox</type>
</CustomField>