.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Job_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_Name__c</fullName>
    <formula>sirenum__Team__r.sirenum__Job_Type__r.Name</formula>
    <label>Job Type Name</label>
    <type>Text</type>
</CustomField>