.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Lock_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Lock_Timestamp__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Lock Timestamp</label>
    <type>DateTime</type>
</CustomField>