.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Min_Award_Level_Rank__c.field-meta.xml
<CustomField>
    <fullName>Min_Award_Level_Rank__c</fullName>
    <label>Min Award Level Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>