.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Minform_UUID__c.field-meta.xml
<CustomField>
    <fullName>Minform_UUID__c</fullName>
    <label>Minform UUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>