.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Minimum_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Pay_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Minimum Pay Rate record related to the Shift. This value is automatically set by system automation.</description>
    <inlineHelpText>Minimum Pay Rate record related to the Shift. This value is automatically set by system automation.</inlineHelpText>
    <label>Minimum Pay Rate</label>
    <referenceTo>tc9_et__Minimum_Pay_Rate__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>