.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Notes_Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Notes_Internal_Only__c</fullName>
    <label>Notes (Internal Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>