.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Overtime_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Treatment__c</fullName>
    <formula>text(sirenum__Contact__r.tc9_pr__Primary_Payee_Record__r.Overtime_Treatment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the Contact.PrimaryPayee record</inlineHelpText>
    <label>Overtime Treatment</label>
    <type>Text</type>
</CustomField>