.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Previous_Shift__c.field-meta.xml
<CustomField>
    <fullName>Previous_Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Shift</label>
    <referenceTo>sirenum__Shift__c</referenceTo>
    <relationshipLabel>Shifts (Previous Shift)</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>