.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>