.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>Rank for Shifts in Schedule</description>
    <label>Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>