.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Rate_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Rate_Mismatch__c</fullName>
    <description>This is a checkbox formula that compares Shift&apos;s Award Level and Minimum Pay Rate Award Level
Also compares Shift&apos;s Award Classification and Minimum Pay Rate Award Classification</description>
    <formula>tc9_ext_sirint__Award_Level__r.Name &lt;&gt; Minimum_Pay_Rate__r.tc9_et__Award_Level__r.Name
||
tc9_ext_sirint__Award_Classification__r.Name &lt;&gt; Minimum_Pay_Rate__r.tc9_et__Award_Classification__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Mismatch</label>
    <type>Checkbox</type>
</CustomField>