.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Rates_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Rates_Assignment_Status__c</fullName>
    <inlineHelpText>This field gets populated automatically through the process that assigns rates to the Shift.</inlineHelpText>
    <label>Rates Assignment Status</label>
    <type>TextArea</type>
</CustomField>