.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Re_run_Rates_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Re_run_Rates_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System Admin can set this to TRUE to re-run Rates Assignments to update MPR Rate etc.</description>
    <inlineHelpText>System Admin can set this to TRUE to re-run Rates Assignments to update MPR Rate etc.</inlineHelpText>
    <label>Re-run Rates Assignment</label>
    <type>Checkbox</type>
</CustomField>