.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Reconfirmed__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmed__c</fullName>
    <label>Reconfirm with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reconfirmed with Facility</fullName>
                <label>Facility</label>
            </value>
            <value>
                <fullName>Reconfirmed with Employee</fullName>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>