.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Time</fullName>
            </value>
            <value>
                <fullName>Other Other</fullName>
            </value>
            <value>
                <fullName>Client Issues</fullName>
            </value>
            <value>
                <fullName>Distance</fullName>
            </value>
            <value>
                <fullName>Pay Too Low</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>