.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Role_OR_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Role_OR_Bundle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Role OR Bundle</label>
    <referenceTo>sirenum__CompetencyBundle__c</referenceTo>
    <relationshipLabel>Shifts (Role OR Bundle)</relationshipLabel>
    <relationshipName>Role_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>