.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Status__c</fullName>
    <label>Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Name Given</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Reconfirm with Employee</fullName>
            </value>
            <value>
                <fullName>Reconfirm with Facility</fullName>
            </value>
            <value>
                <fullName>Reconfirm</fullName>
            </value>
            <value>
                <fullName>In a Cancelled Shift</fullName>
            </value>
            <value>
                <fullName>Shift Cancelled Filled</fullName>
            </value>
            <value>
                <fullName>Shift Cancelled</fullName>
            </value>
            <value>
                <fullName>Unable to Fill</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Awaiting Allocation</fullName>
                <isActive>false</isActive>
                <label>Awaiting Allocation</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Reconfirmed</fullName>
                <isActive>false</isActive>
                <label>Reconfirmed</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>