.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <label>Shift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>