.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/sirenum_Scheduled_Local_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>sirenum_Scheduled_Local_Start_Date_c__c</fullName>
    <formula>sirenum__Scheduled_Local_Start_Date__c - DATE (1900, 1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Start Date Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>