.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <formula>sirenum__Site__r.sirenum__Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>