.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Site_Changed_by_Shift_Approval_App__c.field-meta.xml
<CustomField>
    <fullName>Site_Changed_by_Shift_Approval_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Changed by Shift Approval App</label>
    <type>Checkbox</type>
</CustomField>