.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Site_City__c.field-meta.xml
<CustomField>
    <fullName>Site_City__c</fullName>
    <formula>sirenum__Site__r.sirenum__City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site City</label>
    <type>Text</type>
</CustomField>