.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Site_Lattitude__c.field-meta.xml
<CustomField>
    <fullName>Site_Lattitude__c</fullName>
    <formula>sirenum__Site__r.sirenum__Coordinates__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Lattitude</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>