.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <formula>sirenum__Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>