.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Skill_Attribute_OR_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Skill_Attribute_OR_Bundle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Skill / Attribute OR Bundle</label>
    <referenceTo>sirenum__CompetencyBundle__c</referenceTo>
    <relationshipLabel>Shifts (Skill / Attribute OR Bundle)</relationshipLabel>
    <relationshipName>Skill_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>