.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Timesheet_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver_Name__c</fullName>
    <label>Timesheet Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>