.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Unlisted_Site__c.field-meta.xml
<CustomField>
    <fullName>Unlisted_Site__c</fullName>
    <label>Unlisted Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>