.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/VMS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>VMS_External_Id__c</fullName>
    <label>VMS External Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>